// ArquivoComponent.java
public interface ArquivoComponent {
    void mostrar();
}
